<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/discover_btn_genres"
        style="@style/DiscoverFilterButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:text="@string/genres"
        app:layout_constraintEnd_toStartOf="@id/discover_btn_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/discover_btn_country"
        style="@style/DiscoverFilterButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/country"
        app:layout_constraintEnd_toStartOf="@id/discover_btn_year"
        app:layout_constraintStart_toEndOf="@id/discover_btn_genres"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/discover_btn_year"
        style="@style/DiscoverFilterButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/release"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/discover_btn_country"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/discover_list"
        layout="@layout/common_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discover_btn_genres" />


    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/discover_list">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genres_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:lineSpacing="4dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/country_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:lineSpacing="4dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/year_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:itemSpacing="4dp"
            app:lineSpacing="4dp"
            app:singleSelection="true" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/reset"
                app:backgroundTint="@color/md_theme_scrim" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/ok" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>